# Calculator

./: .gitignore  CMakeLists.txt  Dockerfile
.github/workflows/: ci.yml
include/: Calculator.h
src/: Calculator.cpp  CalculatorMain.cpp
tests/: test_calculator.cpp
